test(apps): resolve AppUiToadletTest lint